--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
   <script type="importmap">
 {
   "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.87.1",
     "jspdf": "https://esm.sh/jspdf@^3.0.4",
-    "resend": "https://esm.sh/resend@^6.6.0"
+    "resend": "https://esm.sh/resend@^6.6.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.33.0"
   }
 }
 </script>
@@ -81,6 +81,10 @@
   <body>
     <canvas id="starfield"></canvas>
     <div id="root"></div>
+    
+    <!-- CRITICAL FIX: Entry point for Vite/React application -->
+    <script type="module" src="/index.tsx"></script>
+
     <script>
       // Starfield Logic
       (function() {
