feat: Implement webhook for payment events
Integrate a webhook endpoint to receive and process payment-related events from a third-party service. This includes security measures like HMAC signature verification and interaction with Supabase for data persistence.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.87.1",
     "jspdf": "https://esm.sh/jspdf@^3.0.4",
     "resend": "https://esm.sh/resend@^6.6.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.33.0"
+    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
+    "crypto": "https://esm.sh/crypto@^1.0.1"
   }
 }
 </script>
