--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- DYNAMIC SVG FAVICON: CV-Rocket Theme -->
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cdefs%3E%3Cfilter id='glow'%3E%3CfeGaussianBlur stdDeviation='2' result='coloredBlur'/%3E%3CfeMerge%3E%3CfeMergeNode in='coloredBlur'/%3E%3CfeMergeNode in='SourceGraphic'/%3E%3C/feMerge%3E%3C/filter%3E%3C/defs%3E%3C!-- Flame --%3E%3Cpath d='M32 54 L28 62 L32 64 L36 62 Z' fill='%2306b6d4' filter='url(%23glow)'/%3E%3C!-- Fins --%3E%3Cpath d='M20 48 L12 58 L24 54 Z' fill='%230f172a' stroke='%2306b6d4' stroke-width='2'/%3E%3Cpath d='M44 48 L52 58 L40 54 Z' fill='%230f172a' stroke='%2306b6d4' stroke-width='2'/%3E%3C!-- Body --%3E%3Crect x='20' y='8' width='24' height='42' rx='6' fill='%23020617' stroke='%2306b6d4' stroke-width='2'/%3E%3C!-- Window --%3E%3Ccircle cx='32' cy='24' r='6' fill='%230f172a' stroke='%2306b6d4' stroke-width='1.5'/%3E%3C!-- Scan Line --%3E%3Cpath d='M22 14 L42 14' stroke='%2306b6d4' stroke-width='1' opacity='0.5'/%3E%3C/svg%3E" />
     <title>Analizador Cósmico de CV</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
