--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <meta property="og:url" content="https://cv.somosmaas.org/" />
     <meta property="og:title" content="Analizador Cósmico de CV" />
     <meta property="og:description" content="Potencia tu carrera como migrante de alta ambición. Auditoría IA, rango militar y plan de vuelo." />
-    <meta property="og:image" content="/rocket.jpg" />
+    <!-- IMAGEN SOCIAL ACTUALIZADA -->
+    <meta property="og:image" content="/social-preview.jpg" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -21,7 +22,8 @@
     <meta property="twitter:url" content="https://cv.somosmaas.org/" />
     <meta name="twitter:title" content="Analizador Cósmico de CV" />
     <meta name="twitter:description" content="Potencia tu carrera como migrante de alta ambición. Auditoría IA, rango militar y plan de vuelo." />
-    <meta name="twitter:image" content="/rocket.jpg" />
+    <!-- IMAGEN SOCIAL ACTUALIZADA -->
+    <meta name="twitter:image" content="/social-preview.jpg" />
 
     <!-- DYNAMIC SVG FAVICON: CV-Rocket Theme (Este se mantiene generado por código como te gustó) -->
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cdefs%3E%3Cfilter id='glow'%3E%3CfeGaussianBlur stdDeviation='2' result='coloredBlur'/%3E%3CfeMerge%3E%3CfeMergeNode in='coloredBlur'/%3E%3CfeMergeNode in='SourceGraphic'/%3E%3C/feMerge%3E%3C/filter%3E%3C/defs%3E%3C!-- Flame --%3E%3Cpath d='M32 54 L28 62 L32 64 L36 62 Z' fill='%2306b6d4' filter='url(%23glow)'/%3E%3C!-- Fins --%3E%3Cpath d='M20 48 L12 58 L24 54 Z' fill='%230f172a' stroke='%2306b6d4' stroke-width='2'/%3E%3Cpath d='M44 48 L52 58 L40 54 Z' fill='%230f172a' stroke='%2306b6d4' stroke-width='2'/%3E%3C!-- Body --%3E%3Crect x='20' y='8' width='24' height='42' rx='6' fill='%23020617' stroke='%2306b6d4' stroke-width='2'/%3E%3C!-- Window --%3E%3Ccircle cx='32' cy='24' r='6' fill='%230f172a' stroke='%2306b6d4' stroke-width='1.5'/%3E%3C!-- Scan Line --%3E%3Cpath d='M22 14 L42 14' stroke='%2306b6d4' stroke-width='1' opacity='0.5'/%3E%3C/svg%3E" />
